--- a/Lab.1
+++ b/Lab.1
@@ -1,3 +1,12 @@
+/*
+Lab.1:
+Написати класи згідно вибраної предметної області. Хоча б для двох зв'язаних класів (наслідування або агрегація) реалізувати методи toString, equals, hashCode.  
+Написати javadocs.
+Хоча б для одного класу реалізувати патерн Builder.
+3. Бронювання номерів.
+    Інформація про номери: тип, кількість ліжок, номер кімнати, зручності. Замовник: прізвище, ім'я, документ, що підтверджує особу, дата народження. Бронювання: який номер, хто бронює, з якої дати по яку, інформація про оплату.
+*/
+
 import java.util.Objects;
 import java.util.Date;
 
